--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ grp_meeting = 'grp_meeting.add:main'
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
+black = "^23.11.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
